fix: search bar overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,7 @@ body {
   font-family: "Raleway", sans-serif;
   color: #080126;
   margin: 0;
+  box-sizing: border-box;
 }
 
 button {
@@ -68,7 +69,6 @@ p {
 
 /* search bar */
 .search-bar {
-  width: min(100%, 360px);
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -86,6 +86,7 @@ p {
   font-size: 20px;
   font-weight: bold;
   height: 44px;
+  max-width: max(100%, 88px);
   border-top-width: 1px;
   border-bottom-width: 1px;
   border-left-color: transparent;
